@@ -1,5 +1,5 @@
 <?php
-//	Version: 0.7; Subs-PrettyUrls
+//	Version: 0.8; Subs-PrettyUrls
 
 if (!defined('SMF'))
 	die('Hacking attempt...');
@@ -11,7 +11,7 @@ function generatePrettyUrl($text)
 
 	//	Do you know your ABCs?
 	$characterHash = array (
-		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª', 'ą', 'Ą', 'а', 'А', 'ạ', 'Ạ', 'ả', 'Ả', 'Ầ', 'ầ', 'Ấ', 'ấ', 'Ậ', 'ậ', 'Ẩ', 'ẩ', 'Ẫ', 'ẫ', 'Ă', 'ă', 'Ắ', 'ắ', 'Ẵ', 'ẵ', 'Ặ', 'ặ', 'Ằ', 'ằ', 'Ẳ', 'ẳ', 'あ', 'ア'),
+		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª', 'ą', 'Ą', 'а', 'А', 'ạ', 'Ạ', 'ả', 'Ả', 'Ầ', 'ầ', 'Ấ', 'ấ', 'Ậ', 'ậ', 'Ẩ', 'ẩ', 'Ẫ', 'ẫ', 'Ă', 'ă', 'Ắ', 'ắ', 'Ẵ', 'ẵ', 'Ặ', 'ặ', 'Ằ', 'ằ', 'Ẳ', 'ẳ', 'あ', 'ア', 'α', 'Α'),
 		'aa'	=>	array ('ا'),
 		'ae'	=>	array ('æ', 'Æ', 'ﻯ'),
 		'and'	=>	array ('&'),
@@ -24,19 +24,19 @@ function generatePrettyUrl($text)
 		'bu'	=>	array ('ぶ', 'ブ'),
 		'c'	=>	array ('c', 'C', 'ç', 'Ç', 'ć', 'Ć', 'č', 'Č'),
 		'cent'	=>	array ('¢'),
-		'ch'	=>	array ('ч', 'Ч'),
+		'ch'	=>	array ('ч', 'Ч', 'χ', 'Χ'),
 		'chi'	=>	array ('ち', 'チ'),
 		'copyright'	=>	array ('©'),
-		'd'	=>	array ('d', 'D', 'Ð', 'д', 'Д', 'د', 'ض', 'đ', 'Đ'),
+		'd'	=>	array ('d', 'D', 'Ð', 'д', 'Д', 'د', 'ض', 'đ', 'Đ', 'δ', 'Δ'),
 		'da'	=>	array ('だ', 'ダ'),
 		'de'	=>	array ('で', 'デ'),
 		'degrees'	=>	array ('°'),
 		'dh'	=>	array ('ذ'),
 		'do'	=>	array ('ど', 'ド'),
-		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'え', 'エ'),
-		'f'	=>	array ('f', 'F', 'ф', 'Ф', 'ﻑ'),
+		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'え', 'エ', 'ε', 'Ε'),
+		'f'	=>	array ('f', 'F', 'ф', 'Ф', 'ﻑ', 'φ', 'Φ'),
 		'fu'	=>	array ('ふ', 'フ'),
-		'g'	=>	array ('g', 'G', 'ğ', 'Ğ', 'г', 'Г'),
+		'g'	=>	array ('g', 'G', 'ğ', 'Ğ', 'г', 'Г', 'γ', 'Γ'),
 		'ga'	=>	array ('が', 'ガ'),
 		'ge'	=>	array ('げ', 'ゲ'),
 		'gh'	=>	array ('غ'),
@@ -49,32 +49,32 @@ function generatePrettyUrl($text)
 		'he'	=>	array ('へ', 'ヘ'),
 		'hi'	=>	array ('ひ', 'ヒ'),
 		'ho'	=>	array ('ほ', 'ホ'),
-		'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï', 'ı', 'İ', 'и', 'И', 'Ị', 'ị', 'Ỉ', 'ỉ', 'Ĩ', 'ĩ', 'い', 'イ'),
+		'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï', 'ı', 'İ', 'и', 'И', 'Ị', 'ị', 'Ỉ', 'ỉ', 'Ĩ', 'ĩ', 'い', 'イ', 'η', 'Η', 'Ι', 'ι'),
 		'j'	=>	array ('j', 'J', 'ج'),
 		'ji'	=>	array ('じ', 'ぢ', 'ジ', 'ヂ'),
-		'k'	=>	array ('k', 'K', 'к', 'К', 'ك'),
+		'k'	=>	array ('k', 'K', 'к', 'К', 'ك', 'κ', 'Κ'),
 		'ka'	=>	array ('か', 'カ'),
 		'ke'	=>	array ('け', 'ケ'),
 		'kh'	=>	array ('х', 'Х', 'خ'),
 		'ki'	=>	array ('き', 'キ'),
 		'ko'	=>	array ('こ', 'コ'),
 		'ku'	=>	array ('く', 'ク'),
-		'l'	=>	array ('l', 'L', 'ł', 'Ł', 'л', 'Л', 'ل'),
+		'l'	=>	array ('l', 'L', 'ł', 'Ł', 'л', 'Л', 'ل', 'λ', 'Λ'),
 		'la'	=>	array ('ﻻ'),
-		'm'	=>	array ('m', 'M', 'м', 'М', 'م'),
+		'm'	=>	array ('m', 'M', 'м', 'М', 'م', 'μ', 'Μ'),
 		'ma'	=>	array ('ま', 'マ'),
 		'me'	=>	array ('め', 'メ'),
 		'mi'	=>	array ('み', 'ミ'),
 		'mo'	=>	array ('も', 'モ'),
 		'mu'	=>	array ('む', 'ム'),
-		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń', 'н', 'Н', 'ن', 'ん', 'ン'),
+		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń', 'н', 'Н', 'ن', 'ん', 'ン', 'ν', 'Ν'),
 		'na'	=>	array ('な', 'ナ'),
 		'ne'	=>	array ('ね', 'ネ'),
 		'ni'	=>	array ('に', 'ニ'),
 		'no'	=>	array ('の', 'ノ'),
 		'nu'	=>	array ('ぬ', 'ヌ'),
-		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º', 'о', 'О', 'Ọ', 'ọ', 'Ỏ', 'ỏ', 'Ộ', 'ộ', 'Ố', 'ố', 'Ỗ', 'ỗ', 'Ồ', 'ồ', 'Ổ', 'ổ', 'Ơ', 'ơ', 'Ờ', 'ờ', 'Ớ', 'ớ', 'Ợ', 'ợ', 'Ở', 'ở', 'Ỡ', 'ỡ', 'お', 'オ'),
-		'p'	=>	array ('p', 'P', 'п', 'П'),
+		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º', 'о', 'О', 'Ọ', 'ọ', 'Ỏ', 'ỏ', 'Ộ', 'ộ', 'Ố', 'ố', 'Ỗ', 'ỗ', 'Ồ', 'ồ', 'Ổ', 'ổ', 'Ơ', 'ơ', 'Ờ', 'ờ', 'Ớ', 'ớ', 'Ợ', 'ợ', 'Ở', 'ở', 'Ỡ', 'ỡ', 'お', 'オ', 'ο', 'Ο', 'ω', 'Ω'),
+		'p'	=>	array ('p', 'P', 'п', 'П', 'π', 'Π'),
 		'pa'	=>	array ('ぱ', 'パ'),
 		'pe'	=>	array ('ぺ', 'ペ'),
 		'percent'	=>	array ('%'),
@@ -83,6 +83,7 @@ function generatePrettyUrl($text)
 		'plusminus'	=>	array ('±'),
 		'po'	=>	array ('ぽ', 'ポ'),
 		'pound'	=>	array ('£'),
+		'ps'	=>	array ('ψ', 'Ψ'),
 		'pu'	=>	array ('ぷ', 'プ'),
 		'q'	=>	array ('q', 'Q', 'ق'),
 		'quarter'	=>	array ('¼'),
@@ -92,7 +93,7 @@ function generatePrettyUrl($text)
 		'ri'	=>	array ('り', 'リ'),
 		'ro'	=>	array ('ろ', 'ロ'),
 		'ru'	=>	array ('る', 'ル'),
-		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś', 'с', 'С', 'س', 'ص', 'š', 'Š'),
+		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś', 'с', 'С', 'س', 'ص', 'š', 'Š', 'σ', 'ς', 'Σ'),
 		'sa'	=>	array ('さ', 'サ'),
 		'se'	=>	array ('せ', 'セ'),
 		'section'	=>	array ('§'),
@@ -102,26 +103,26 @@ function generatePrettyUrl($text)
 		'so'	=>	array ('そ', 'ソ'),
 		'ss'	=>	array ('ß'),
 		'su'	=>	array ('す', 'ス'),
-		't'	=>	array ('t', 'T', 'т', 'Т', 'ت', 'ط'),
+		't'	=>	array ('t', 'T', 'т', 'Т', 'ت', 'ط', 'τ', 'Τ'),
 		'ta'	=>	array ('た', 'タ'),
 		'te'	=>	array ('て', 'テ'),
-		'th'	=>	array ('ث'),
+		'th'	=>	array ('ث', 'θ', 'Θ'),
 		'three-quarters'	=>	array ('¾'),
 		'to'	=>	array ('と', 'ト'),
 		'ts'	=>	array ('ц', 'Ц'),
 		'tsu'	=>	array ('つ', 'ツ'),
-		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'µ', 'у', 'У', 'Ụ', 'ụ', 'Ủ', 'ủ', 'Ũ', 'ũ', 'Ư', 'ư', 'Ừ', 'ừ', 'Ứ', 'ứ', 'Ự', 'ự', 'Ử', 'ử', 'Ữ', 'ữ', 'う', 'ウ'),
-		'v'	=>	array ('v', 'V', 'в', 'В'),
+		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'у', 'У', 'Ụ', 'ụ', 'Ủ', 'ủ', 'Ũ', 'ũ', 'Ư', 'ư', 'Ừ', 'ừ', 'Ứ', 'ứ', 'Ự', 'ự', 'Ử', 'ử', 'Ữ', 'ữ', 'う', 'ウ', 'υ', 'Υ'),
+		'v'	=>	array ('v', 'V', 'в', 'В', 'β', 'Β'),
 		'w'	=>	array ('w', 'W', 'و'),
 		'wa'	=>	array ('わ', 'ワ'),
 		'wo'	=>	array ('を', 'ヲ'),
-		'x'	=>	array ('x', 'X', '×'),
+		'x'	=>	array ('x', 'X', '×', 'ξ', 'Ξ'),
 		'y'	=>	array ('y', 'Y', 'ý', 'Ý', 'ÿ', 'й', 'Й', 'ы', 'Ы', 'ي', 'Ỳ', 'ỳ', 'Ỵ', 'ỵ', 'Ỷ', 'ỷ', 'Ỹ', 'ỹ'),
 		'ya'	=>	array ('я', 'Я', 'や'),
 		'yen'	=>	array ('¥'),
 		'yo'	=>	array ('よ'),
 		'yu'	=>	array ('ю', 'Ю', 'ゆ'),
-		'z'	=>	array ('z', 'Z', 'ż', 'Ż', 'ź', 'Ź', 'з', 'З', 'ز', 'ظ', 'ž', 'Ž'),
+		'z'	=>	array ('z', 'Z', 'ż', 'Ż', 'ź', 'Ź', 'з', 'З', 'ز', 'ظ', 'ž', 'Ž', 'ζ', 'Ζ'),
 		'za'	=>	array ('ざ', 'ザ'),
 		'ze'	=>	array ('ぜ', 'ゼ'),
 		'zh'	=>	array ('ж', 'Ж'),
